# faststring

./: .gitignore  README.md  makefile  pyproject.toml  setup.py
src/: faststring.c
test/: test.py  test_benchmark.py  test_unittests.py
