[project]
name = "faststring"
description = "Python library for mutable string manipulation."
readme = "README.md"
dynamic = [
    "authors",
    "classifiers",
    "optional-dependencies",
    "version",
    "license",
    "requires-python",
]
dependencies = [
    "pytest-benchmark[histogram]>=5.1.0",
]

[project.urls]
"Homepage" = "https://github.com/rohaquinlop/faststring"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
