[project]
name = "faststring"
description = "Python library for mutable string manipulation."
readme = "README.md"
dynamic = [
    "authors",
    "classifiers",
    "optional-dependencies",
    "version",
    "license",
    "requires-python",
]

[project.urls]
"Homepage" = "https://github.com/rohaquinlop/faststring"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
reinstall-package = ["faststring"]
